# Devolve

./: .gitignore  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT_SUMMARY.md  README.md  VISUALIZATION_COMPLETE.md  demo.py  pyproject.toml  requirements.txt  run_all_algorithms_visualization.py  setup.py  test_adaptive_all.py  test_benchmarks.py  test_jde.py  test_package.py  test_utilities.py  test_visualization.py
algorithm_benchmark_results/: summary_statistics.txt
devolve/: __init__.py
devolve/algorithms/: __init__.py
devolve/algorithms/adaptive/: __init__.py  jade.py  jde.py  lshade.py  lshade_epsin.py  shade.py
devolve/algorithms/classic/: __init__.py  debest1.py  debest2.py  decurrent_to_best1.py  derand1.py  derand2.py
devolve/algorithms/hybrid/: __init__.py
devolve/algorithms/multiobjective/: __init__.py
devolve/benchmarks/: __init__.py  cec2017.py  classic.py  engineering.py
devolve/constraints/: __init__.py
devolve/core/: __init__.py  base.py  boundary.py  individual.py  logger.py  population.py  problem.py
devolve/ml/: __init__.py
devolve/operators/: __init__.py  crossover.py  mutation.py  selection.py
devolve/utils/: __init__.py  io.py  metrics.py  parallel.py  seed.py  stats.py  visualization.py  visualization_extended.py  visualization_master.py
docs/: VISUALIZATION.md  benchmarks.md  utilities.md
examples/: 01_basic_usage.py  02_custom_problems.py  03_visualization_demo.py  comprehensive_benchmarks.py  utilities_comprehensive.py
