[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "devolve"
version = "1.0.0"
description = "Comprehensive Differential Evolution library for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DEvolve Development Team", email = "your.email@example.com"}
]
keywords = ["differential-evolution", "optimization", "genetic-algorithm", "metaheuristic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
gpu = ["cupy>=10.0.0"]
docs = ["sphinx>=4.0.0", "sphinx_rtd_theme>=1.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0", "black>=22.0.0", "flake8>=4.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/devolve"
Documentation = "https://devolve.readthedocs.io"
Repository = "https://github.com/yourusername/devolve"
Issues = "https://github.com/yourusername/devolve/issues"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=devolve --cov-report=html --cov-report=term-missing"
